# vpn-engine

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: build-apk.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Socks5Server.cpp  ZeroTierEngine.cpp  native-lib.cpp  zt_stubs.cpp
app/src/main/cpp/include/: Socks5Server.h  ZeroTierEngine.h
app/src/main/java/com/vpnengine/nativecore/: IpPacketParser.kt  LocalLoopbackGateway.kt  MainActivity.kt  ServerConfig.kt  Socks5ProxyServer.kt  TcpConnectionManager.kt  TunSocksBridge.kt  VpnNotificationHelper.kt  VpnState.kt  VpnStateHolder.kt  VpnStopReceiver.kt  VpnTunnelService.kt  VpnViewModel.kt  ZtCentralApi.kt  ZtEngine.kt  ZtSocks5Client.kt
app/src/main/java/com/vpnengine/nativecore/ui/screen/: VpnScreen.kt
app/src/main/java/com/vpnengine/nativecore/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_vpn_notification.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml
proxy/: proxy_server.py  setup_tun.sh
